# nutanix-vlan-migrator

./: .gitignore  README.md  config.example.yaml  install.ps1  install.sh  pyproject.toml  requirements.txt  run.ps1  run.sh
docs/: index.html
vlan_migrator/: __init__.py  cli.py  client.py  config.py  interactive.py  inventory.py  migrator.py  portpoll.py  validators.py
